# ankicommunity-api-server

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.example.yml  pyproject.toml
addon/: __init__.py  config.json
charts/: README.md
charts/djankiserv/: Chart.yaml  linter_values.yaml  values.yaml
charts/djankiserv/charts/: ingress-nginx-2.13.0.tgz  postgresql-10.3.4.tgz  postgresql-9.3.3.tgz
charts/djankiserv/templates/: clusterissuer.prod.yaml  clusterissuer.staging.yaml  djankiserv-deployment.yaml  djankiserv-pvc.yaml  static-deployment.yaml
doc/: CONTRIBUTING.md  ConnectingAnki.md  Development.md  Installation.md
docs/: mkdocs.yml
docs/src/: index.md
docs/src/usage/: connecting-to-anki-desktop.md  development.md  installation.md
images/main/: Dockerfile  requirements.txt
scripts/: buildaddon.sh  buildimages.sh  poetry-export.sh  poetry-lock.sh  poetry-update.sh  postgres-clean.sh  postgres-init.sh  postgres.sh  precommit-install.sh  precommit-uninstall.sh  runcoverage.sh  rundevserver.sh  runlinting.sh  runmanage.sh  runserver.sh  runsetup.sh  runtests.sh
scripts/helm/: README.md  values.yaml
scripts/helm/templates/: NOTES.txt  _helpers.tpl  djankiserv-service.yaml  ingress.yaml  serviceaccount.yaml  static-service.yaml
scripts/images/main/: Dockerfile
scripts/images/static/: Dockerfile
src/: requirements.ci.txt  requirements.mariadb.txt  requirements.myonly.txt  requirements.pgonly.txt  requirements.postgres.txt  requirements.txt
src/djankiserv/: apps.py  signals.py  urls.py
src/djankiserv/api/: urls.py
src/djankiserv/sync/: urls.py  views.py
src/djankiserv/unki/: cards.py  collection.py  database.py  decks.py  download.py  models.py  notes.py  sched.py
src/djankiserv_api/: apps.py  settings.py  urls.py  views.py  wsgi.py
src/djankiserv_api/views/: __init__.py  decks.py  health.py  models.py  notes.py  tags.py
src/djankiserv_app/: settings.py  urls.py  wsgi.py
src/djankiserv_cli/: __main__.py  manage.py
src/djankiserv_sync/: __init__.py  dependencies.py  urls.py  views.py
src/djankiserv_sync/views/: __init__.py  msync.py  sync.py
src/djankiserv_unki/: __init__.py  cards.py  collection.py  database.py  decks.py  download.py  models.py  notes.py  sched.py
src/djankiserv_utils/: __init__.py  logger.py
src/djankiservproj/: settings.py  urls.py  wsgi.py
tests/: __init__.py  test_api.py  test_sync_down.py  test_sync_up.py
tests/assets/: one_note_reviewed_one_deleted_sql.anki2  one_note_reviewed_one_deleted_sql.sql
tests/assets/api/: decks.json  decks_conf.json  models.json  new_notes.json  tags.json  two_notes.json
(+319 files in other folders)
